<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/info_1"
            android:id="@+id/info1_id"
            android:icon="@drawable/ic_info"/>
        <item
            android:title="@string/info_2"
            android:id="@+id/info2_id"
            android:icon="@drawable/ic_info"/>
        <item
            android:title="@string/info_3"
            android:id="@+id/info3_id"
            android:icon="@drawable/ic_info"/>
        <item
            android:title="@string/info_4"
            android:id="@+id/info4_id"
            android:icon="@drawable/ic_info"/>
        <item
            android:title="@string/info_5"
            android:id="@+id/info5_id"
            android:icon="@drawable/ic_info"/>
    </group>

    <item android:title="@string/subheader">
        <menu>
            <item
                android:title="@string/another_info1_1"
                android:id="@+id/another_info1_1"/>
            <item
                android:title="@string/another_info1_2"
                android:id="@+id/another_info1_2"/>
            <item
                android:title="@string/another_info1_3"
                android:id="@+id/another_info1_3"/>
        </menu>
    </item>
</menu>